--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,17 +11,17 @@ aux_source_directory(../test/test_net DIR_TEST_NET)
 aux_source_directory(../test/test_runtime DIR_TEST_RUNTIME)
 
 set(link_lib glog::glog GTest::gtest)
-if(!WIN32)
+if (!WIN32)
     set(link_lib "${link_lib} pthread")
-endif()
-set(link_math_lib  ${ARMADILLO_LIBRARIES} ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
+endif ()
+set(link_math_lib ${ARMADILLO_LIBRARIES} ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
 
 add_executable(test_kuiper test_main.cpp ${DIR_TEST_DATA} ${DIR_TEST_LAYER} ${DIR_TEST_NET} ${DIR_TEST_RUNTIME})
-if(MSVC)
+if (MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /O0")
-else()
+else ()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -fopenmp -march=native")
-endif()
+endif ()
 
 target_link_libraries(test_kuiper ${link_lib} ${link_math_lib})
 target_link_directories(test_kuiper PUBLIC ${PROJECT_SOURCE_DIR}/lib)
@@ -32,10 +32,13 @@ if (MSVC)
             COMMAND ${CMAKE_COMMAND} -E copy_if_different
             "$<TARGET_FILE_DIR:kuiper>/kuiper.dll"
             $<TARGET_FILE_DIR:test_kuiper>)
-endif()
+endif ()
 
 target_include_directories(test_kuiper PUBLIC ${glog_INCLUDE_DIR})
 target_include_directories(test_kuiper PUBLIC ${GTest_INCLUDE_DIR})
 target_include_directories(test_kuiper PUBLIC ${Armadillo_INCLUDE_DIR})
 
+set_target_properties(test_kuiper PROPERTIES
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
 
