--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 project(kuiper_infer)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_STANDARD 17)
 include_directories(./include)
 set(PROJECT_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
