--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ if (MSVC)
 endif ()
 option(BUILD_DEMO "BUILD THE DEMO PROJECT")
 
-set(BUILD_DEMO OFF)
+set(BUILD_DEMO ON)
 
 if (BUILD_DEMO)
     MESSAGE(STATUS "BUILD DEMO PROJECT")
