--- a/.github/workflows/cmake-windows.yml
+++ b/.github/workflows/cmake-windows.yml
@@ -66,3 +66,7 @@ jobs:
         working-directory: ${{github.workspace}}
         run: ${{github.workspace}}/build/test/${{ env.BUILD_TYPE }}/test_kuiper.exe
 
+      - name: Bench
+        working-directory: ${{github.workspace}}
+        run: ${{github.workspace}}/build/bench/${{ env.BUILD_TYPE }}/bench_kuiper.exe
+
