--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -41,3 +41,7 @@ jobs:
         working-directory: ${{github.workspace}}
         run: ${{github.workspace}}/build/test/test_kuiper
 
+      - name: Bench
+        working-directory: ${{github.workspace}}
+        run: ${{github.workspace}}/build/bench/bench_kuiper
+
