实现llama2 generate demo

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_subdirectory(resnet)
-add_subdirectory(unet)
-add_subdirectory(yolo)
-add_subdirectory(mobilenet)
+#add_subdirectory(resnet)
+#add_subdirectory(unet)
+#add_subdirectory(yolo)
+#add_subdirectory(mobilenet)
+add_subdirectory(llama2)
